RESOLVED FIXED313952
[AppKit Gestures] Occasional debug assertion crash when clicking in a PDF in an iframe
https://bugs.webkit.org/show_bug.cgi?id=313952
Summary [AppKit Gestures] Occasional debug assertion crash when clicking in a PDF in ...
Richard Robinson
Reported 2026-05-03 22:31:56 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-03 22:32:04 PDT
Richard Robinson
Comment 2 2026-05-03 22:40:36 PDT
EWS
Comment 3 2026-05-04 12:15:04 PDT
Committed 312538@main (f0569fd3c773): <https://commits.webkit.org/312538@main> Reviewed commits have been landed. Closing PR #64147 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.